--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(elastic)
 
 set(CMAKE_CXX_STANDARD 17)
 add_executable(elastic main.cpp Client.cpp Client.h logger.cpp logger.h utilities/environment.cpp utilities/environment.h utilities/queries.cpp utilities/queries.h)
+set(SIMDJSON_JUST_LIBRARY ON CACHE STRING "Build just the library, nothing else." FORCE)
+add_subdirectory(simdjson EXCLUDE_FROM_ALL)
 find_package( CURL REQUIRED )
 pkg_check_modules(libcurl REQUIRED IMPORTED_TARGET libcurl>=7.17.0)
-target_link_libraries(elastic PUBLIC PkgConfig::libcurl)
+target_link_libraries(elastic PUBLIC PkgConfig::libcurl simdjson)
