--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.22)
 project(elastic)
 
 set(CMAKE_CXX_STANDARD 17)
-add_executable(elastic main.cpp Client.cpp Client.h logger.cpp logger.h utilities/environment.cpp utilities/environment.h utilities/queries.cpp utilities/queries.h utilities/validationHandler.cpp utilities/validationHandler.h)
+add_executable(elastic main.cpp Client.cpp Client.h utilities/logger/logger.cpp utilities/logger/logger.h utilities/environment.cpp utilities/environment.h utilities/queries.cpp utilities/queries.h utilities/validationHandler.cpp utilities/validationHandler.h)
 set(SIMDJSON_JUST_LIBRARY ON CACHE STRING "Build just the library, nothing else." FORCE)
 add_subdirectory(simdjson EXCLUDE_FROM_ALL)
 find_package( CURL REQUIRED )
