Init module branch.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,15 @@
 cmake_minimum_required(VERSION 3.25)
 project(elastic)
 
-set(CMAKE_CXX_STANDARD 23)
-add_executable(elastic main.cpp Client.cppm utilities/logger/local_logger.cppm utilities/querybuilder/queries.cppm
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+add_executable(elastic
+        main.cpp Client.cppm utilities/logger/local_logger.cppm utilities/querybuilder/queries.cppm
         utilities/utilFunctions.cppm utilities/configfileHandler.cppm utilities/querybuilder/searchQuery.cppm
         utilities/querybuilder/queries.cppm)
+
 find_package(CURL REQUIRED)
 pkg_check_modules(libcurl REQUIRED IMPORTED_TARGET libcurl>=7.17.0)
 include(FetchContent)
@@ -18,5 +23,4 @@ FetchContent_Declare(
         GIT_SHALLOW TRUE
         DOWNLOAD_EXTRACT_TIMESTAMP TRUE)
 FetchContent_MakeAvailable(simdjson)
-
-target_link_libraries(elastic PUBLIC PkgConfig::libcurl simdjson nlohmann_json::nlohmann_json simdjson)
+target_link_libraries(elastic PUBLIC PkgConfig::libcurl simdjson nlohmann_json::nlohmann_json)
