--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,8 @@
-cmake_minimum_required(VERSION 3.25)
+cmake_minimum_required(VERSION 3.22)
 project(elastic)
 
-set(CMAKE_CXX_STANDARD 23)
-add_executable(elastic main.cpp Client.cppm utilities/logger/local_logger.cppm utilities/querybuilder/queries.cppm
-        utilities/utilFunctions.cppm utilities/configfileHandler.cppm utilities/querybuilder/searchQuery.cppm
-        utilities/querybuilder/queries.cppm)
+set(CMAKE_CXX_STANDARD 17)
+add_executable(elastic main.cpp Client.cpp Client.h utilities/logger/logger.cpp utilities/logger/logger.h utilities/environment.cpp utilities/environment.h utilities/querybuilder/queries.cpp utilities/querybuilder/queries.h utilities/utilFunctions.cpp utilities/utilFunctions.h utilities/configfileHandler.cpp utilities/configfileHandler.h utilities/querybuilder/searchQuery.cpp utilities/querybuilder/searchQuery.h)
 find_package(CURL REQUIRED)
 pkg_check_modules(libcurl REQUIRED IMPORTED_TARGET libcurl>=7.17.0)
 include(FetchContent)
